--- a/src/main/resources/templates/member/AddDetailsMemberForm.html
+++ b/src/main/resources/templates/member/AddDetailsMemberForm.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="input-form-background row">
         <div class="input-form mx-auto">
-            <h4 class="mb-3">주소 정보 추가</h4>
+            <h4 class="mb-3">추가 정보</h4>
             <form class="validation-form" novalidate th:action="@{/signup/details}" th:method="post" th:object="${memberDetailsForm}">
 
                 <div class="mb-5">
