--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -47,8 +47,9 @@
                     </ul>
                 </li>
                 <li sec:authorize="isAuthenticated()">
-                    <a class="nav-link" href="#" role="button">
-                        <img src="https://img.icons8.com/material-outlined/32/000000/filled-appointment-reminders.png" alt="alarm"/>
+                    <a class="nav-link" href="/alarmList" role="button">
+                        <img th:if="${!hasAlarm}" src="https://img.icons8.com/external-anggara-filled-outline-anggara-putra/32/000000/external-notification-multimedia-anggara-filled-outline-anggara-putra-3.png" alt="alarm"/>
+                        <img th:if="${hasAlarm}" src="https://img.icons8.com/external-anggara-filled-outline-anggara-putra/32/000000/external-notification-multimedia-anggara-filled-outline-anggara-putra-2.png" alt="newAlarm"/>
                     </a>
                 </li>
             </ul>
