--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -47,15 +47,87 @@
                         <li><a class="dropdown-item" href="#"><img src="https://img.icons8.com/ios/24/000000/novel--v1.png" alt="attention"/> 관심목록</a></li>
                     </ul>
                 </li>
-                <li sec:authorize="isAuthenticated()">
-                    <a class="nav-link" href="/alarmList" role="button">
-                        <img th:if="${!hasAlarm}" src="../images/alarm.png" alt="alarm"/>
-                        <img th:if="${hasAlarm}" src="../images/add-alarm.png" alt="newAlarm"/>
+                <li id="alarm" sec:authorize="isAuthenticated()" class="nav-item dropdown alarmClass">
+                    <a class="nav-link alarmClass" href="#" role="button" data-bs-toggle="dropdown">
+                        <img th:if="${!hasAlarm}" src="../images/alarm.png" alt="alarm" class="alarmClass"/>
+                        <img th:if="${hasAlarm}" src="../images/add-alarm.png" alt="newAlarm" class="alarmClass"/>
                     </a>
+                    <ul id="alarmList" class="dropdown-menu list-group list-group-flush" style="overflow:auto; height: 700px; width: 420px; display: none">
+
+                    </ul>
                 </li>
             </ul>
         </div>
     </nav>
 <br><br><br><br>
+
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+
+        $(document).on('click', function (e) {
+           if(!$(e.target).hasClass("alarmClass")) {
+               $("#alarmList").css("display", "none");
+           }
+        });
+
+        $("#alarm").on('click', function () {
+
+            $("#alarmList").css("display", "");
+
+            $.ajax({
+                url:"/alarmList/show.do",
+                type:"get",
+                sync: false,
+                success: function (alarmList) {
+                    $("#alarmList").empty();
+                    $("#alarmList").append(
+                        "<div style='height: 30px; vertical-align: middle;'>" +
+                            "<span style='float: left; margin-left: 13px; line-height: 40px;'>알림</span>" +
+                            "<span style='float: right; margin-right: 13px; line-height: 28px;'><a href='/alarmList'><img src=\"https://img.icons8.com/ios/28/000000/search-in-list.png\"/></a></span>" +
+                        "</div>" +
+                        "<hr>"
+                    )
+                    $.each(alarmList, function (index, alarm) {
+
+                        let clickYnTag;
+
+                        if (alarm.clickYn === "Y") {
+                            clickYnTag = "<div id='circle2'></div>";
+                        } else {
+                            clickYnTag = "<div id='circle1'></div>";
+                        }
+
+                        $("#alarmList").append(
+                            "<li>" +
+                                "<a href=\"" + alarm.link + "\" class=\"dropdown-item list-group-item-action\" id=\"alarm-" + alarm.id + "\" onclick='alarmClick(this)'>" +
+                                    "<div style='float:left; display: inline-block; margin-right: 5px; margin-top: 10px;'>" +
+                                        clickYnTag +
+                                    "</div>" +
+                                    "<div style='display: inline-block'>" +
+                                        "<small class=\"text-muted\" style='white-space: normal'>" + "<span style='color:#0090F9'>" + alarm.sender + "</span>" + "님이 " + alarm.message + "</small>" +
+                                        "<small class=\"fromNow text-muted\" style='display: block'>" + alarm.diffCreatedAt + "</small>" +
+                                    "</div>" +
+                                "</a>" +
+                            "</li>" +
+                            "<hr>"
+
+                        )
+                    })
+                }
+            });
+        });
+
+        function alarmClick(alarm) {
+            let alarmId = alarm.id.toString().substring(6);
+            $.ajax({
+                url:"/alarmList/click.do",
+                type:"post",
+                sync: false,
+                data: {"alarmId" : alarmId}
+            });
+        }
+
+        /*]]>*/
+    </script>
 </header>
 </html>
