채팅하기 데모 구현

--- a/src/main/resources/templates/member/LoginForm.html
+++ b/src/main/resources/templates/member/LoginForm.html
@@ -9,7 +9,7 @@
             <div class="input-form mx-auto">
                 <form action="/login_proc" method="POST">
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-                        <p class="lead fw-normal mb-0 me-3">Sign in with</p>
+                        <p class="lead fw-normal mb-0 me-3">SNS 로그인 with</p>
 
                         <button type="button" class="btn btn-light btn-floating mx-1 btn-social" data-social="google">
                             <img src="/images/google.PNG" style="width:25px; height:25px"/>
@@ -25,7 +25,7 @@
                     </div>
 
                     <div class="divider d-flex align-items-center my-4">
-                        <p class="text-center fw-bold mx-3 mb-0">Or</p>
+                        <p class="text-center fw-bold mx-3 mb-0">OR</p>
                     </div>
 
                     <!-- Email input -->
@@ -45,15 +45,15 @@
                         <div class="form-check mb-0">
                             <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
                             <label class="form-check-label" for="form2Example3">
-                                Remember me
+                                로그인 상태 유지
                             </label>
                         </div>
-                        <a href="#!" class="text-body">Forgot password?</a>
+                        <a href="#!" class="text-body">비밀번호를 잊어버리셨나요?</a>
                     </div>
 
                     <div class="text-center text-lg-start mt-4 pt-2">
-                        <button type="submit" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="/signup" class="link-danger">Register</a></p>
+                        <button type="submit" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">로그인</button>
+                        <p class="small fw-bold mt-2 pt-1 mb-0">아직 회원이 아니신가요? <a href="/signup" class="link-danger">회원가입</a></p>
                     </div>
                 </form>
             </div>
