--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -47,10 +47,15 @@
                         <li><a class="dropdown-item" href="#"><img src="https://img.icons8.com/ios/24/000000/novel--v1.png" alt="attention"/> 관심목록</a></li>
                     </ul>
                 </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
+                    <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">
+                        <img src="https://img.icons8.com/windows/32/000000/messaging-.png"/>
+                    </a>
+                </li>
                 <li id="alarm" sec:authorize="isAuthenticated()" class="nav-item dropdown alarmClass">
                     <a class="nav-link alarmClass" href="#" role="button" data-bs-toggle="dropdown">
-                        <img th:if="${!hasAlarm}" src="../images/alarm.png" alt="alarm" class="alarmClass"/>
-                        <img th:if="${hasAlarm}" src="../images/add-alarm.png" alt="newAlarm" class="alarmClass"/>
+                        <img th:if="${!hasAlarm}" th:src="@{/images/alarm.png}" alt="alarm" class="alarmClass" style="width:32px; height: 32px"/>
+                        <img th:if="${hasAlarm}" th:src="@{/images/add-alarm.png}" alt="newAlarm" class="alarmClass" style="width:32px; height: 32px"/>
                     </a>
                     <ul id="alarmList" class="dropdown-menu list-group list-group-flush" style="overflow:auto; height: 700px; width: 420px; display: none">
 
