채팅 생성시 알람 기능 구현

--- a/src/main/resources/templates/board/InquireBoard.html
+++ b/src/main/resources/templates/board/InquireBoard.html
@@ -37,7 +37,7 @@
                     <img th:if="${attentionInpYn eq 'Y'}"id="heart-red" src="https://img.icons8.com/color/50/000000/novel--v1.png"/>
                 </button>
                 <span class="card-text" th:text="|${#numbers.formatInteger(board.price, 0, 'COMMA')}￦|"></span>
-                <a th:href="@{/board/{boardId}/chat(boardId=${board.id})}" class="btn btn-primary" style="float:right; background-color: orange; border-color: orange">채팅하기</a>
+                <a id="chatBtn" class="btn btn-primary" style="float:right; background-color: orange; border-color: orange">채팅하기</a>
             </div>
         </div>
         <div style="padding:50px; border: 1px solid lightgray; border-radius: 20px; display: flex; justify-content: center; margin-top: 50px;">
@@ -84,6 +84,16 @@
 
     let boardId = /*[[${board.id}]]*/;
     let loginMemberId = /*[[${memberId}]]*/;
+    let boardMemberId = /*[[${board.memberId}]]*/;
+
+    $(function () {
+        if (loginMemberId === boardMemberId) {
+            $("#chatBtn").hide();
+        }
+
+        let encryptBoardId = btoa(boardId);
+        $("#chatBtn").attr("href", `/board/${boardId}/chat?roomNum=${encryptBoardId}`);
+    });
 
     $("#attentionBtn").on('click', function () {
         $.ajax({
@@ -203,6 +213,7 @@
             }
         })
     });
+
 
     /*]]>*/
 </script>
