--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -129,6 +129,8 @@
             senderName: senderName,
             receiverId: receiverId,
             receiverName: receiverName,
+            boardId: boardId,
+            boardTitle: boardTitle,
             msg: msgInput.value,
         };
 
