--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="물품을 검색해보세요." aria-label="Search">
                     <button class="btn btn-link" type="submit">
-                        <img src="https://img.icons8.com/dusk/30/000000/search--v1.png"/>
+                        <img src="https://img.icons8.com/ios-glyphs/32/000000/search--v1.png" alt="search"/>
                     </button>
                 </form>
             </div>
@@ -24,6 +24,7 @@
 <!--                <button sec:authorize="isAuthenticated()" type="button" class="btn btn-outline-secondary btn-space" th:onclick="|location.href='/certify'|">동네인증</button>-->
                 <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
                     <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">
+                        <h5 sec:authorize="isAuthenticated()" style="display: inline-block;" th:text="${nickname}"></h5>
                         <img th:if="${certifyYn eq 'Y'}" src="https://img.icons8.com/windows/32/000000/check-male.png" alt="account"/>
                         <img th:if="${certifyYn eq 'N'}" src="https://img.icons8.com/windows/32/000000/contacts.png" alt="account"/>
                     </a>
@@ -63,6 +64,7 @@
                 </li>
             </ul>
         </div>
+
     </nav>
 <br><br><br><br>
 
