채팅 생성시 메세지 sender, receiver 등록 로직 수정

--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/head::head"></head>
 <header th:replace="fragments/header::header"></header>
 <body>
-<h4 class="mb-3" style="margin-left: 560px;">채팅하기</h4>><br><br>
+<h4 class="mb-3" style="margin-left: 560px;">채팅하기</h4><br><br>
 <div class="container" style="width: 800px;">
     <div class="card row d-flex justify-content-center align-items-center h-100" style="padding: 30px 50px 50px 50px">
         <div style="margin-bottom: 50px;">
