--- a/src/main/resources/templates/alarm/InquireAlarmList.html
+++ b/src/main/resources/templates/alarm/InquireAlarmList.html
@@ -19,20 +19,21 @@
             </ul>
 
             <ul class="list-group mt-4">
-                <a href="#" th:if="${newAttentionAlarmList.size() > 0}"
-                   class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                <a href="#" th:if="${newAttentionAlarmList.size() > 0}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                     새 관심 알림
                     <span th:text="${newAttentionAlarmList.size()}">3</span>
                 </a>
-                <a href="#" th:if="${newCommentAlarmList.size() > 0}"
-                   class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                <a href="#" th:if="${newCommentAlarmList.size() > 0}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                     새 댓글 알림
                     <span th:text="${newCommentAlarmList.size()}">0</span>
                 </a>
-                <a href="#" th:if="${newLikesAlarmList.size() > 0}"
-                   class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                <a href="#" th:if="${newLikesAlarmList.size() > 0}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                     새 좋아요 알림
                     <span th:text="${newLikesAlarmList.size()}">0</span>
+                </a>
+                <a href="#" th:if="${newChatAlarmList.size() > 0}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                    새 채팅 알림
+                    <span th:text="${newChatAlarmList.size()}">0</span>
                 </a>
             </ul>
 
@@ -89,6 +90,20 @@
                         <div class="d-flex w-100 justify-content-between">
                             <small class="text-muted"><span th:text="${likesAlarm.sender}" style="color: #0090F9"></span>님이 [[${likesAlarm.message}]]</small>
                             <small class="fromNow text-muted" th:text="${likesAlarm.diffCreatedAt}"></small>
+                        </div>
+                    </a>
+                </ul>
+            </div>
+
+            <div class="card mt-4" th:if="${newChatAlarmList.size() > 0}">
+                <div class="card-header">
+                    나의 댓글에 좋아요가 눌렸습니다.
+                </div>
+                <ul class="list-group list-group-flush">
+                    <a th:href="@{${chatAlarm.link}}" th:each="chatAlarm : ${newChatAlarmList}" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <small class="text-muted"><span th:text="${chatAlarm.sender}" style="color: #0090F9"></span>님이 [[${chatAlarm.message}]]</small>
+                            <small class="fromNow text-muted" th:text="${chatAlarm.diffCreatedAt}"></small>
                         </div>
                     </a>
                 </ul>
