--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -48,8 +48,8 @@
                         <li><a class="dropdown-item" href="#"><img src="https://img.icons8.com/ios/24/000000/novel--v1.png" alt="attention"/> 관심목록</a></li>
                     </ul>
                 </li>
-                <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
-                    <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <a class="nav-link" href="/chatList" role="button">
                         <img src="https://img.icons8.com/windows/32/000000/messaging-.png"/>
                     </a>
                 </li>
